# bazel_test_poc

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  main.cc
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docker/: Dockerfile
