#load("@io_bazel_rules_docker//container:container.bzl", "container_image")
#
#container_image(
#  name = "basic_alpine",
#  base = "@alpine_linux_amd64//image",
#  cmd = ["Hello World!"],
#  entrypoint = ["echo"],
#)

cc_binary(
  name = "app",
  srcs = [
    "main.cc"
  ],
  copts = ["-Iinclude", "-Wall", "-Werror"],
)

cc_test(
  name = "hello_test",
  size = "small",
  srcs = ["hello_test.cc"],
  deps = ["@com_google_googletest//:gtest_main"],
)